<resources>
    <string name="app_name">ShoeStore</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="new_login">New Login</string>
    <string name="login_with_existing_account">Login with existing account</string>

    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">We\'re delighted to have you here. We\'ll remember your grocery needs so you won\'t forget anything. Thank you!</string>
    <string name="go_to_instructions">What does this app do?</string>

    <string name="instructions_title">Instructions</string>
    <string name="instructions_message">Look around the list of items by scrolling. Add more items that you need to buy.</string>
    <string name="go_to_grocery_list">Let\'s go!</string>
    <string name="edit">Edit</string>

    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="back_without_saving">Back without saving</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="default_float_value">0</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="grocery_list">Grocery List</string>
    <string name="add_item">Add Item</string>

</resources>
