<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.grocerydelivery.screens.login.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_groceryListFragment"
            app:destination="@id/groceryListFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.grocerydelivery.screens.welcome.WelcomeFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.grocerydelivery.screens.instructions.InstructionsFragment"
        android:label="@string/instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_groceryListFragment"
            app:destination="@id/groceryListFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/groceryListFragment"
        android:name="com.udacity.grocerydelivery.screens.grocerylist.GroceryListFragment"
        android:label="@string/grocery_list">
        <action
            android:id="@+id/action_groceryListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" />
        <argument
            android:name="new_item"
            android:defaultValue="@null"
            app:argType="com.udacity.grocerydelivery.models.Item"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.udacity.grocerydelivery.screens.itemdetail.AddItemFragment"
        android:label="@string/add_item">
        <action
            android:id="@+id/action_itemDetailFragment_to_groceryListFragment"
            app:destination="@id/groceryListFragment"
            app:popUpTo="@id/groceryListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>