<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
          Why LinearLayout?

          A simple vertically-stacked views.
     -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/instructions_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instructions_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/instructions_message" />

        <Button
            android:id="@+id/go_to_grocerylist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/go_to_grocery_list" />
    </LinearLayout>

</layout>